[tool.poetry]
name = "loka-de-test"
version = "0.1.0"
description = ""
authors = ["Vinicius Moda <vinicius.santiagomoda@gmail.com>"]
readme = "README.md"
packages = [{include = "loka_de_test"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.3.0"
sphinx-terraform = "^0.2"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
